Bug 96739 - Video rendering corruption when using VAAPI postproc denoise on 1080p Videos.
Summary: Video rendering corruption when using VAAPI postproc denoise on 1080p Videos.
Status: RESOLVED FIXED
Alias: None
Product: libva
Classification: Unclassified
Component: intel (show other bugs)
Version: unspecified
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: haihao
QA Contact: Sean V Kelley
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-06-30 06:52 UTC by Ung, Teng En
Modified: 2016-07-27 07:45 UTC (History)
2 users (show)

See Also:
i915 platform:
i915 features:


Attachments

Description Ung, Teng En 2016-06-30 06:52:37 UTC
Verify gstreamer vaapipostproc denoise=1 and observed the video rendering with corruption on single line at bottom part of the video. When setting the level of denoise to 0, no corruption being observed.

Command: denoise level 1 

gst-launch-1.0 filesrc location=<1080p Video> ! qtdemux ! vaapidecode ! vaapipostproc denoise=1 ! vaapisink fullscreen=1
Comment 1 Ung, Teng En 2016-06-30 06:58:39 UTC
https://lists.freedesktop.org/archives/libva/2016-June/004036.html

The above patch solve the issue.
Comment 2 haihao 2016-07-27 07:45:06 UTC
The patch is applied.

commit 51ad826fcc0d2512f7ef74e807e4b8526663fc28
Author: Ung, Teng En <teng.en.ung@intel.com>
Date:   Wed Jun 22 10:49:22 2016 +0800

    Fix to use source and output regions size instead of the input output surfaces original size


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.