Fix to use source and output regions size instead of the input output surfaces original size.

This fixes https://bugs.freedesktop.org/show_bug.cgi?id=96739

Signed-off-by: Ung, Teng En <teng.en.ung@intel.com>
Reviewed-by: Zhao Yakui <yakui.zhao@intel.com>