src/gen75_vpp_vebox.c
@@ -1379,11 +1379,11 @@ int hsw_veb_pre_format_convert(VADriverContextP ctx,
 
     proc_ctx->format_convert_flags = 0;
 
-    proc_ctx->width_input   = obj_surf_input->orig_width;
-    proc_ctx->height_input  = obj_surf_input->orig_height;
-    proc_ctx->width_output  = obj_surf_output->orig_width;
-    proc_ctx->height_output = obj_surf_output->orig_height;
-   
+    proc_ctx->width_input   = proc_ctx->pipeline_param->surface_region->width;
+    proc_ctx->height_input  = proc_ctx->pipeline_param->surface_region->height;
+    proc_ctx->width_output  = proc_ctx->pipeline_param->output_region->width;
+    proc_ctx->height_output = proc_ctx->pipeline_param->output_region->height;
+
     /* only partial frame is not supported to be processed */
     /*
     assert(proc_ctx->width_input   == proc_ctx->pipeline_param->surface_region->width);
